welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: identifier expected but integer literal found.
		avance(nbPas:6);gauche();avance();gauche();
                             ^SnakeBuggle:7: error: ')' expected but '}' found.
		}else{
                ^SnakeBuggle:7: error: ';' expected but 'else' found.
		}else{
                 ^SnakeBuggle:14: error: Unmatched closing brace '}' ignored here
}
^