welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse
	var posFinal:Boolean=false
	while(!posFinal){	
		avance(nbPas:6);gauche();avance();gauche();
		}else{
			
		}
	}
}
